<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">



    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-2dp">

        <ImageView
            android:id="@+id/profileUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/user2"
            app:srcCompat="@drawable/user2" />

        <Button
            android:id="@+id/button_populate"
            android:layout_width="95dp"
            android:layout_height="100dp"
            android:text="UPLOAD IMAGE"
            android:translationX="155dp"
            android:translationY="50dp" />

        <TextView
            android:id="@+id/HosgeldinizText"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="@string/Hosgeldiniz"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationX="250dp" />

        <TextView
            android:id="@+id/AdSoyadText"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/AdSoyadText"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textStyle="bold"
            android:translationX="260dp"
            android:translationY="40dp" />

        <TextView
            android:id="@+id/EmailText"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/EmailText"
            android:textAlignment="viewStart"
            android:textStyle="bold"
            android:translationX="260dp"
            android:translationY="82dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/FrameLayout2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:translationY="200dp"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/IcındekilerBtn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/IcındekilerBtn"
            android:translationX="100dp"
            android:translationY="0dp" />

        <RadioButton
            android:id="@+id/SmallRadioBtn"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/Small"
            android:translationX="100dp"
            android:translationY="50dp" />

        <RadioButton
            android:id="@+id/MediumRadioBtn"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:text="@string/Medium"
            android:translationX="200dp"
            android:translationY="50dp" />

        <RadioButton
            android:id="@+id/LargeRadioBtn"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/Large"
            android:translationX="300dp"
            android:translationY="50dp" />

        <ImageView
            android:id="@+id/CheeseBurgerOrder"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/CheeseBurger"
            app:srcCompat="@drawable/cheeseburger" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/FrameLayout3"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:translationY="-400dp"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_editor_absoluteX="200dp">

        <Button
            android:id="@+id/IcındekilerBtn1"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/IcındekilerBtn"
            android:translationX="100dp"
            android:translationY="0dp" />

        <RadioButton
            android:id="@+id/SmallRadioBtn2"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/Small"
            android:translationX="100dp"
            android:translationY="50dp" />

        <RadioButton
            android:id="@+id/MediumRadioBtn2"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:text="@string/Medium"
            android:translationX="200dp"
            android:translationY="50dp" />

        <RadioButton
            android:id="@+id/LargeRadioBtn2"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:text="@string/Large"
            android:translationX="300dp"
            android:translationY="50dp" />

        <ImageView
            android:id="@+id/PizzaOrder"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/Pizza"
            app:srcCompat="@drawable/pizza" />

        <Button
            android:id="@+id/HesaplaBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="HESAPLA"
            android:translationX="100dp"
            android:translationY="200dp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>